# RPG_tracker

./: .env.example  .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml  quest_rpg_backend_plan_ru.md
.github/workflows/: ci.yml
apps/accounts/: admin.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/characters/: admin.py  models.py  serializers.py  urls.py  views.py
apps/characters/migrations/: 0001_initial.py  0002_characterprofile_last_activity_on_and_more.py
apps/common/: viewsets.py
apps/habits/: admin.py  models.py  serializers.py  urls.py  views.py
apps/habits/migrations/: 0001_initial.py
apps/progression/: admin.py  models.py  rules.py  serializers.py  services.py  urls.py  views.py
apps/progression/migrations/: 0001_initial.py
apps/quests/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/quests/migrations/: 0001_initial.py  0002_quest_xp_reward.py
config/: settings.py  urls.py
docs/: README.md
docs/planning/: README.md  quest_rpg_backend_plan.md
tests/: test_auth_and_profile_api.py  test_habits_and_quests_api.py  test_progression_api.py  test_project_setup.py
